# favro-mcp

./: .env.example  .gitignore  .mcp.development.example.json  .mcp.example.json  FAVRO_API_GUIDE.md  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml
.github/workflows/: publish.yml
src/favro_mcp/: __init__.py  __main__.py  client.py  config.py  context.py  models.py  server.py
src/favro_mcp/api/: __init__.py  client.py  models.py
src/favro_mcp/resolvers/: __init__.py  base.py  board.py  card.py  column.py  organization.py  tag.py  user.py
src/favro_mcp/resources/: __init__.py  boards.py  cards.py  columns.py  organizations.py
src/favro_mcp/tools/: __init__.py  boards.py  cards.py  collections.py  columns.py  organizations.py  tags.py  users.py
