[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "favro-mcp"
version = "0.1.0"
description = "MCP server for Favro project management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8.0", "pyright>=1.1.389"]

[project.scripts]
favro-mcp = "favro_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/favro_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
