[project]
name = "favro-mcp"
version = "0.1.0"
description = "MCP server for Favro project management"
readme = "README.md"
license = "MIT"
authors = [{ name = "Truls Borgvall", email = "truls.borgvall@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pyright>=1.1.389"]

[project.scripts]
favro-mcp = "favro_mcp.__main__:main"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]

build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/favro_mcp"]
